# course-advisor-agent

./: .env  .env.example  .gitignore  Dockerfile  README.md  course-advisor-agent.rar  pyproject.toml
.github/workflows/: ci-cd.yml
app/: agent.py  config.py  dependencies.py  groq_compat.py  main.py  prompts.py
app/admin/: conversations_router.py  router.py
app/api/: ingestion_router.py
app/auth/: __init__.py  dependencies.py  jwt_handler.py  password.py  router.py  service.py
app/cost/: __init__.py  calculator.py  pricing.py
app/database/: __init__.py  mongo.py
app/embeddings/: __init__.py  provider.py
app/ingestion/: __init__.py  chunker.py  index_bootstrap.py  index_builder.py  loaders.py  parsers.py  pipeline.py  storage_manager.py
app/monitoring/: __init__.py  router.py  store.py
app/prompts/: __init__.py  behavior.py  formatting.py  identity.py  rag.py  safety.py  sales.py
app/repositories/: base.py  conversation_repository.py  course_repository.py  crm_repository.py  knowledge_repository.py  message_repository.py  roadmap_repository.py  trace_repository.py  usage_log_repository.py  user_repository.py
app/retrieval/: __init__.py  base.py  bm25_retriever.py  dense_retriever.py  hybrid_retriever.py  reranker.py  retrieval_service.py
app/sales/: __init__.py  intent.py  lead_detector.py
app/schemas/: CourseSearchResult_.py  __init__.py  agent.py  api.py  conversation.py  course.py  crm_ticket.py  message.py  roadmap.py  search.py  trace.py  usage_log.py  user.py
app/static/: index.html  (+3 more)
dashboard/: app.py
tests/: test_agent.py  test_compliance.py  test_crm.py  test_groq_compat.py  test_index_bootstrap.py  test_ingestion.py  test_intent.py  test_kb_coverage.py  test_lead_detector.py  test_prompts_rag.py  test_prompts_sales.py  test_retrieval.py  test_schemas.py  test_session_memory.py  test_smoke.py  test_week3.py
(+23 files in other folders)
