[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "course-advisor-agent"
version = "0.1.0"
description = "Production-grade RAG Course Advisor Agent — LlamaIndex + PydanticAI + Groq"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # ── Web framework ─────────────────────────────────────────────────────────
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # ── LLM + Agent ───────────────────────────────────────────────────────────
    "pydantic-ai[groq]>=0.0.14",
    "pydantic-settings>=2.0",

    # ── LlamaIndex core + integrations ───────────────────────────────────────
    "llama-index>=0.12",
    "llama-index-embeddings-huggingface>=0.4",
    "llama-index-retrievers-bm25>=0.5",

    # ── Embedding model runtime ───────────────────────────────────────────────
    "sentence-transformers>=3.0",
    "torch>=2.0",

    # ── BM25 backend ──────────────────────────────────────────────────────────
    "rank-bm25>=0.2",

    # ── Fuzzy search ──────────────────────────────────────────────────────────
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
chroma = [
    "chromadb>=0.5",
    "llama-index-vector-stores-chroma>=0.3",
]

qdrant = [
    "qdrant-client>=1.9",
    "llama-index-vector-stores-qdrant>=0.3",
]

reranker-cohere = [
    "cohere>=5.0",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]